--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.17.1",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.15",
+    "path": "^0.12.7",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
